# lab-redes-2

./: CMakeLists.txt  README.md
archivos-cliente/: archivo.txt
archivos-servidor/: index.html  style.css
archivos-servidor/css/: index.html  style.css
archivos-servidor/img/: index.html
archivos-servidor/js/: index.html  main.js
include/: hash.h  tcp.h
src/: client.c  hash.c  server.c  tcp.c
